--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.properties.hibernate.format_sql=TRUE
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.open-in-view=false
+
 ###Logging Levels
 # Disable the default loggers
 #logging.level.org = WARN
@@ -18,3 +19,14 @@ spring.jpa.open-in-view=false
 #logging.level.org.hibernate.type.descriptor = TRACE
 #Change server port
 server.port=8001
+#Cloudinary Properties
+cloudinary.cloud-name = doma6noto
+cloudinary.api-key = 512268179821855
+cloudinary.api-secret = ${CLOUDINARY_SECRET}
+
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
+
+carousel.images= info7.png, sbornik.png, info7.png, sbornik.png, info7.png, sbornik.png
+carousel.refresh-cron= "0 */10 * * * *"
