--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,7 +18,7 @@ spring.jpa.open-in-view=false
 #logging.level.org.hibernate.SQL = DEBUG
 #logging.level.org.hibernate.type.descriptor = TRACE
 #Change server port
-server.port=8001
+server.port=8000
 #Cloudinary Properties
 cloudinary.cloud-name = doma6noto
 cloudinary.api-key = 512268179821855
@@ -28,5 +28,5 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-carousel.images= info7.png, sbornik.png, info7.png, sbornik.png, info7.png, sbornik.png
+carousel.images= info1.png,info2.png,info3.png,info1.png,info2.png,info3.png
 carousel.refresh-cron= "0 */10 * * * *"
