--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -28,5 +28,11 @@ spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
 
-carousel.images= info1.png,info2.png,info3.png,info1.png,info2.png,info3.png
-carousel.refresh-cron= "0 */10 * * * *"
+carousel.images= info1.png, info2.png, info3.png, info1.png, info2.png, info3.png
+carousel.refresh-cron= 0 */10 * * * *
+
+log.delete-cron=* */5 * * * *
+
+
+
+
