--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,7 +17,7 @@ spring:
         username: root
     jpa:
         hibernate:
-            ddl-auto: create-drop
+            ddl-auto: update
         open-in-view: false
         properties:
             hibernate:
