--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,7 @@ spring:
             enabled: true
             max-file-size: 10MB
             max-request-size: 10MB
+logging:
+    level:
+         root: info
+
