--- a/src/test/resources/application.yml
+++ b/src/test/resources/application.yml
@@ -21,10 +21,10 @@ spring:
         hibernate:
             ddl-auto: create-drop
         open-in-view: false
-        properties:
-            hibernate:
-                dialect: org.hibernate.dialect.MySQL8Dialect
-                format_sql: true
+#        properties:
+#            hibernate:
+#                dialect: org.hibernate.dialect.MySQL8Dialect
+#                format_sql: true
     servlet:
         multipart:
             enabled: true
